# ft_select

./: .gitignore  CMakeLists.txt  Makefile
includes/: defines.h  ft_select.h
srcs/: .gitignore  del_node.c  main.c  move_elem.c  util_linkedlist.c  util_mode_terminal.c  util_print.c  util_signals.c  util_termcap.c
